# swift-composable-architecture

./: .bazelrc  .editorconfig  .gitignore  .spi.yml  BUILD.bazel  Gemfile  LICENSE  Makefile  Package.resolved  Package.swift  Package@swift-5.1.swift  Package@swift-5.3.swift  Package@swift-5.7.swift  Package@swift-5.9.swift  Package@swift-6.0.swift  README.md  StoreState.md  WORKSPACE.bazel  deps.bzl  results
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  question.md
.github/package.xcworkspace/: contents.xcworkspacedata
.github/workflows/: benchmark.yml  cache.yml  ci.yml  docs.yml  documentation.yml  format.yml  release.yml  scheduled-ci.yml  wiki.yml
0.38.0/: index.html
0.38.0/css/: documentation-topic.80eb4bec.css  documentation-topic~topic~tutorials-overview.f5bcd98c.css  index.ef288297.css  topic.92cff5f6.css  tutorials-overview.e2234d7f.css
0.38.0/index/: index.json
0.38.0/js/: documentation-topic.ea2cf311.js  documentation-topic~topic~tutorials-overview.87c26cf7.js  highlight-js-c.d1db3f17.js  index.e6e75ff8.js  topic.4bd07648.js  tutorials-overview.cc3adcdf.js
0.39.0/css/: documentation-topic.2e1a588d.css  documentation-topic~topic~tutorials-overview.755c48fe.css
0.39.0/index/: index.json
0.39.0/js/: documentation-topic.2e047050.js  documentation-topic~topic~tutorials-overview.e83ed271.js  index.f75b0766.js  tutorials-overview.2edee811.js
0.40.0/: metadata.json  theme-settings.json
0.40.0/css/: documentation-topic.4243ce21.css  documentation-topic~topic~tutorials-overview.75795658.css  index.cb47e112.css
0.40.0/index/: index.json
0.40.0/js/: documentation-topic.46b6f9e9.js  documentation-topic~topic~tutorials-overview.b8e06853.js  index.5ecd9b84.js  (+1 more)
0.46.0/: theme-settings.json
1.13.0/: metadata.json
1.16.0/: metadata.json
1.17.0/: metadata.json
1.18.0/: metadata.json
1.19.0/: metadata.json
Benchmarks/: Package.resolved  Package.swift
ComposableArchitecture.xcworkspace/: contents.xcworkspacedata
Examples/: ComposableArchitecture.xctestplan  Package.swift  README.md  Search.xctestplan  SpeechRecognition.xctestplan  SyncUps.xctestplan  Todos.xctestplan  VoiceMemos.xctestplan
MyPlayground.playground/: Contents.swift  contents.xcplayground
bazel_integration/: deps.bzl
main/: metadata.json
(+223547 files in other folders)
